--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "webpack-dev-server --host 0.0.0.0 --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
